--- a/src/main/webapp/css/carousel.css
+++ b/src/main/webapp/css/carousel.css
@@ -36,15 +36,15 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
-  background-color: #777;
+  height: 300px;
+  background-color:#8DBF2A;
 }
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 300px;
 }
 
 
