--- a/src/main/webapp/css/bootstrap-responsive.css
+++ b/src/main/webapp/css/bootstrap-responsive.css
@@ -12,6 +12,47 @@
   *zoom: 1;
 }
 
+.row-fluid [class*="span"]:first-child {
+margin-left: 0;
+}
+
+.nav-list > li > a, .nav-list .nav-header {
+margin-left: -15px;
+margin-right: -15px;
+text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
+body {
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-size: 14px;
+line-height: 20px;
+color: #333333;
+}
+
+.nav-list > li > a {
+padding: 3px 15px;
+}
+
+.well {
+  min-height: 600px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #222222;
+  border: 1px solid #080808;
+  color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 15px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.container-fluid {
+padding-right: 20px;
+padding-left: 20px;
+}
+
 .clearfix:before,
 .clearfix:after {
   display: table;
@@ -811,9 +852,7 @@
     margin-right: -20px;
     margin-left: -20px;
   }
-  .container-fluid {
-    padding: 0;
-  }
+  
   .dl-horizontal dt {
     float: none;
     width: auto;
@@ -994,8 +1033,14 @@
     display: none;
   }
   .nav-collapse .nav .nav-header {
-    color: white;
-    text-shadow: none;
+    display: block;
+  padding: 3px 15px;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
+  color: white;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
   }
   .nav-collapse .nav > li > a,
   .nav-collapse .dropdown-menu a {
