--- a/src/main/webapp/css/signin.css
+++ b/src/main/webapp/css/signin.css
@@ -106,3 +106,16 @@ fieldset[disabled] .btnsign {
 .offset1 {
   margin-left: 100px;
 }
+
+
+.linkedin_btn {
+display: inline;
+float: none;
+padding: 10px 10px 10px 30px;
+text-align: center;
+width:100%;
+height:40px;
+margin-left: 50px;
+}
+
+
